feat: Add buttons to make ui/ux

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <title>O Labirinto do Fauno</title>
   </head>
   <body>
     <div class="container">
       <canvas class="maze"></canvas>
+    </div>
+    <div>
+      <button id="gerar">Gerar</button>
+      <button id="buscar">buscar</button>
     </div>
     <script src="script.js"></script>
   </body>
