feat: Add logic to search the better path

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <div class="container">
       <canvas class="maze"></canvas>
     </div>
-    <div>
+    <div id="btnGroup">
       <button id="gerar">Gerar</button>
-      <button id="buscar">buscar</button>
+      <button id="buscar" disabled>buscar</button>
+      <button id="new">Novo</button>
     </div>
     <script src="script.js"></script>
   </body>
